refactor: apply clean code audit fixes and enforce naming conventions
- Rename: docs->retrievedDocuments, filtered->bookDocuments, error->unavailableReason
- Rename: StreamingResult.content->textChunks, StreamingNotice.message->summary
- Extract: MAX_ENRICHMENT_SNIPPETS, METADATA_KEY_* constants
- Refactor: Replace Optional.orElse(null) with map/orElseGet chains
- Fix: Remove dead null checks and use TimeUnit for backoff calculation
- Fix: Standardize generic variable names in HybridSearchService/EmbeddingClient